Povezivanje baze i WebAPI

--- a/CarDealership/CarDealership.WebAPI/CarDealership.WebAPI.csproj
+++ b/CarDealership/CarDealership.WebAPI/CarDealership.WebAPI.csproj
@@ -85,12 +85,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AdressController.cs" />
     <Compile Include="Controllers\CarController.cs" />
+    <Compile Include="Controllers\ShopController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Adress.cs" />
     <Compile Include="Models\Car.cs" />
     <Compile Include="Models\DataHolder.cs" />
+    <Compile Include="Models\Employee.cs" />
+    <Compile Include="Models\Shop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
