--- a/CarDealership/CarDealership.WebAPI/CarDealership.WebAPI.csproj
+++ b/CarDealership/CarDealership.WebAPI/CarDealership.WebAPI.csproj
@@ -112,6 +112,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\AutofacConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AdressController.cs" />
     <Compile Include="Controllers\CarController.cs" />
